--- a/SOPManagement/Views/Shared/_Layout.cshtml
+++ b/SOPManagement/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-inverse navbar-fixed-top" style="background-color:darkred">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -16,20 +16,28 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+            
                 @Html.ActionLink("SOP", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("SOP Dashboard", "SOPDashboard", "Home", new { target = "_blank" })</li>
                     <li>@Html.ActionLink("Upload or Create SOP", "CreateUploadSOP", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
-                <p class="nav navbar-text navbar-right">Hello, @User.Identity.Name!</p>
+                @*@User.Identity.Name!*@
+
+                <p class="nav navbar-text navbar-right">Hello, @Session["UserFullName"] </p>
             </div>
         </div>
     </div>
     <div class="container body-content">
+        <div class="row">
+            <div class="col-md-2"> <img src="~/Content/Images/RadiantLogo.jpg" /></div>
+            <div class="col-md-10" style="float:left"><h4> @ViewBag.Title </h4></div>
+        </div>
         @RenderBody()
         <hr />
         <footer>
