--- a/SOPManagement/Views/Home/CreateUploadSOP.cshtml
+++ b/SOPManagement/Views/Home/CreateUploadSOP.cshtml
@@ -11,9 +11,8 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <br />
-
-        <h4>Upload or Create SOP</h4>
+    
+        @*<h4>Upload or Create SOP</h4>*@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
@@ -76,13 +75,13 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.SOPEffectiveDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.SOPEffectiveDate, new { htmlAttributes = new { @class = "form-control", type = "date" } })
                 @Html.ValidationMessageFor(model => model.SOPEffectiveDate, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.Updatefreq, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -711,12 +710,12 @@
 
             }
 
-            var sopeffdate = $('#SOPEffectiveDate').val();
+            //var sopeffdate = $('#SOPEffectiveDate').val();
 
-             if (sopeffdate == "") {
-                alert("SOP Effective date is required!")
-                return true;
-            }
+            // if (sopeffdate == "") {
+            //    alert("SOP Effective date is required!")
+            //    return true;
+            //}
 
             var updfreq = $('#Updatefreq').val();
 
@@ -866,7 +865,7 @@
             sop.append("FolderName", deptfoldernm);
             sop.append("SubFolderName", deptsubfoldernm);
             sop.append("SOPNo", sopnonew);
-            sop.append("SOPEffectiveDate", sopeffdate);
+           // sop.append("SOPEffectiveDate", sopeffdate);
             sop.append("Updatefreq", updfreq);
             sop.append("Updatefrequnit", upfrequnit);
             sop.append("Updfrequnitcode", updfrequcode);
