--- a/SOPManagement/Views/Home/Index.cshtml
+++ b/SOPManagement/Views/Home/Index.cshtml
@@ -3,29 +3,28 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+    <h1>Radiant Canada Standard Operating Procedure (SOP) Document Management</h1>
+    <p class="lead">SOP is a ASP.NET web application that makes SOP management and access very easy through dashboard.</p>
+    <p>It stores SOP documents in Microsoft SharePoint Online and manage changes of document through database.
+    Users can easily manage SOP and access SOP without even having any training on this</p>
+</div> 
 
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
+    <div class="col-md-4">.
+        <h2>How to access SOP</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Coming soon...
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>How to manage SOP</h2>
+        <p>Coming soon..</p>
+        <p><a class="btn btn-default" href="">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>More help</h2>
+        <p>Coming soon...</p>
+        <p><a class="btn btn-default" href="">Learn more &raquo;</a></p>
     </div>
 </div>
