Completed create/upload  and publish pages

--- a/SOPManagement/Views/Home/CreateUploadSOP.cshtml
+++ b/SOPManagement/Views/Home/CreateUploadSOP.cshtml
@@ -327,7 +327,9 @@
 
 
 <div class="submit-progress hidden" id="progessdiv">
-    <i class="fa fa-2x fa-spinner fa-spin"></i>
+    <img src="~/Content/Images/soploading.gif" style="width:55px;height:55px" />
+    @*<i class="fa fa-2x fa-spinner fa-spin"></i>
+        <label>Please wait while submitting SOP...</label>*@
     <label>Please wait while submitting SOP...</label>
 </div>
 
