compled and deployed create and publish sop

--- a/SOPManagement/Views/Home/SOPMessage.cshtml
+++ b/SOPManagement/Views/Home/SOPMessage.cshtml
@@ -23,7 +23,7 @@
 
         </div>
 
-        @if (Session["Dashboardlink"]!=null && Session["Dashboardlink"].ToString()!="")
+        @*@if (Session["Dashboardlink"]!=null && Session["Dashboardlink"].ToString()!="")
         {
 
             <div class="col-md-12">
@@ -35,7 +35,7 @@
             
             <br />
             
-        }
+        }*@
 
 
     </div>
